k8s/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: loki
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loki
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: loki
    spec:
      containers:
        - args:
            - -config.file=/mnt/loki/loki-config.yml
          image: grafana/loki:2.6.1
          name: loki
          ports:
            - containerPort: 3100
          resources: {}
          volumeMounts:
            - mountPath: /mnt/loki/loki-config.yml
              name: loki-claim0
      restartPolicy: Always
      volumes:
        - name: loki-claim0
          persistentVolumeClaim:
            claimName: loki-claim0
status: {}
