k8s/70_loki.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loki
  name: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - args:
            - -config.file=/mnt/loki/loki-config.yml
          image: grafana/loki:2.6.1
          name: loki
          ports:
            - containerPort: 3100
          resources: {}
          volumeMounts:
            - mountPath: /mnt/loki/loki-config.yml
              name: config-vol
      restartPolicy: Always
      volumes:
        - name: config-vol
          hostPath:
            path: /data/loki-config.yml
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loki
  name: loki
spec:
  ports:
    - name: "3100"
      port: 3100
      targetPort: 3100
  selector:
    app: loki
