k8s/90_grafana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - env:
            - name: GF_AUTH_ANONYMOUS_ENABLED
              value: "true"
            - name: GF_AUTH_ANONYMOUS_ORG_ROLE
              value: Admin
            - name: GF_AUTH_DISABLE_LOGIN_FORM
              value: "true"
          image: grafana/grafana:9.1.7
          name: grafana
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources/grafana_ds.yml
              name: config-vol0
            - mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
              name: config-vol1
            - mountPath: /etc/grafana/dashboards
              name: config-vol2
      restartPolicy: Always
      volumes:
        - name: config-vol0
          hostPath:
            path: /data/grafana_ds.yml
        - name: config-vol1
          hostPath:
            path: /data/grafana/dashboards.yaml
        - name: config-vol2
          hostPath:
            path: /data/grafana/dashboards
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: grafana
