k8s/tempo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tempo
spec:
  ports:
    - name: "14250"
      port: 14250
      targetPort: 14250
    - name: "4317"
      port: 4317
      targetPort: 4317
  selector:
    io.kompose.service: tempo
